fixed spacing

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -12,7 +12,7 @@
                 margin-bottom: $p-1;
                 h2 {
                     font: {
-                        size: $f-xl;
+                        size: $f-xls;
                         weight: 700;
                     }
                     text-transform: capitalize;
