--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -19,7 +19,7 @@
                 margin-bottom: $p-1;
                 h2 {
                     font: {
-                        size: $f-md-2;
+                        size: $f-lg;
                         family: 'Leckerli One', cursive;
                         weight: 400;
                     }
