--- a/styles/mixins.module.scss
+++ b/styles/mixins.module.scss
@@ -7,7 +7,7 @@
 
 @mixin section {
     width: 100%;
-    padding: $p-3 $p-1;
+    padding: $p-3 $p-1s;
     position: relative;
 }
 
